[workspace]
members = [
  "chains/astar/config",
  "chains/astar/server",
  "chains/ethereum/backend",
  "chains/ethereum/config",
  "chains/ethereum/rpc-client",
  "chains/ethereum/server",
  "chains/ethereum/tx",
  "chains/ethereum/types",
  "chains/polkadot/config",
  "chains/polkadot/server",
  "chains/polkadot/tx",
  "rosetta-client",
  "rosetta-core",
  "rosetta-crypto",
  "rosetta-docker",
  "rosetta-server",
  "rosetta-types",
  "chains/arbitrum/testing/rosetta-testing-arbitrum",
  "rosetta-utils/serde",
]
resolver = "2"

# Specifying a workspace dependency is similar to package dependencies except:
# - Dependencies from this table cannot be declared as optional
# - features declared in this table are additive with the features from [dependencies]
[workspace.dependencies]
rosetta-config-astar = { path = "chains/astar/config", default-features = false }
rosetta-server-astar = { path = "chains/astar/server" }
rosetta-ethereum-backend = { path = "chains/ethereum/backend" }
rosetta-config-ethereum = { path = "chains/ethereum/config" }
rosetta-server-ethereum = { path = "chains/ethereum/server" }
rosetta-ethereum-rpc-client = { path = "chains/ethereum/rpc-client" }
rosetta-tx-ethereum = { path = "chains/ethereum/tx" }
rosetta-ethereum-types = { path = "chains/ethereum/types", default-features = false }
rosetta-config-polkadot = { path = "chains/polkadot/config" }
rosetta-server-polkadot = { path = "chains/polkadot/server" }
rosetta-tx-polkadot = { path = "chains/polkadot/tx" }
rosetta-client = { path = "rosetta-client" }
rosetta-core = { path = "rosetta-core" }
rosetta-crypto = { path = "rosetta-crypto" }
rosetta-docker = { path = "rosetta-docker" }
rosetta-server = { path = "rosetta-server", default-features = false }
rosetta-types = { path = "rosetta-types" }
rosetta-utils-serde = { path = "rosetta-utils/serde", default-features = false }

## Crates we want all members to use the same version
jsonrpsee = { version = "0.21", default-features = false }
parity-scale-codec = { version = "3.6" }
tokio = { version = "1.32" }
subxt = { version = "0.33", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
scale-info = { version = "2.3" }
