[workspace]
members = [
  "chains/astar/config",
  "chains/astar/server",
  "chains/ethereum/backend",
  "chains/ethereum/config",
  "chains/ethereum/server",
  "chains/ethereum/tx",
  "chains/ethereum/types",
  "chains/polkadot/config",
  "chains/polkadot/server",
  "chains/polkadot/tx",
  "rosetta-client",
  "rosetta-core",
  "rosetta-crypto",
  "rosetta-docker",
  "rosetta-server",
  "rosetta-types",
  "chains/arbitrum/testing/rosetta-testing-arbitrum",
  "rosetta-utils",
  "chains/humanode",
]
resolver = "2"

# Specifying a workspace dependency is similar to package dependencies except:
# - Dependencies from this table cannot be declared as optional
# - features declared in this table are additive with the features from [dependencies]
[workspace.dependencies]
rosetta-config-astar = { path = "chains/astar/config", default-features = false }
rosetta-server-astar = { path = "chains/astar/server" }
rosetta-ethereum-backend = { path = "chains/ethereum/backend" }
rosetta-config-ethereum = { path = "chains/ethereum/config" }
rosetta-server-ethereum = { path = "chains/ethereum/server" }
rosetta-tx-ethereum = { path = "chains/ethereum/tx" }
rosetta-ethereum-types = { path = "chains/ethereum/types", default-features = false }
rosetta-config-polkadot = { path = "chains/polkadot/config" }
rosetta-server-polkadot = { path = "chains/polkadot/server" }
rosetta-humanode = { path = "chains/humanode" }
rosetta-tx-polkadot = { path = "chains/polkadot/tx" }
rosetta-client = { path = "rosetta-client" }
rosetta-core = { path = "rosetta-core" }
rosetta-crypto = { path = "rosetta-crypto" }
rosetta-docker = { path = "rosetta-docker" }
rosetta-server = { path = "rosetta-server", default-features = false }
rosetta-types = { path = "rosetta-types" }
rosetta-utils = { path = "rosetta-utils", default-features = false }

## Crates we want all members to use the same version
jsonrpsee = { version = "0.22", default-features = false }
parity-scale-codec = { version = "3.6" }
tokio = { version = "1.32" }
subxt = { version = "0.34", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
scale-info = { version = "2.3" }

# Used to sign substrate transactions, must be the same version used by subxt
# https://github.com/paritytech/subxt/blob/v0.34.0/Cargo.toml#L125
sp-keyring = { version = "31.0" }
