[package]
name = "dioxus-wallet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dioxus = "0.2.4"
dioxus-router = "0.2.3"
rosetta-client = { path = "../rosetta-client" }
surf = { version = "2.3.2", default-features = false, features = ["h1-client-rustls"] }
async-std = { version = "1.12.0", features = ["attributes"] }


[target.'cfg(not(target_family = "wasm"))'.dependencies]
dioxus-desktop = "0.2.3"
arboard = '3.1.1'


[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11.1"
log = "0.4.17"
paste = "1.0.9"
wry = { version = "0.22.0", git = "https://github.com/tauri-apps/wry", branch = "release" }

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1.7"
dioxus-web = "0.2.1"
wasm-logger = "0.2.0"
