[package]
name = "dioxus-wallet"
version = "0.1.7"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.68"
async-std = "1.12.0"
dioxus = "0.2.4"
dioxus-router = "0.2.3"
fermi = "0.2.1"
futures = "0.3.25"
fraction = { version = "0.12.2", default-features = false, features = ["with-bigint", "with-decimal"] }
include_dir = "0.7.3"
lazy_static = "1.4.0"
qrcode = { git = "https://github.com/qm3ster/qrcode-rust" }
rosetta-client = { path = "../rosetta-client" }
rust-argon2 = "1.0.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
dioxus-desktop = "0.2.3"
surf = { version = "2.3.2", default-features = false, features = ["h1-client-rustls"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "=0.11.1"
jni = "0.20.0"
log = "0.4.17"
ndk-context = "0.1.1"
paste = "1.0.11"

[target.'cfg(target_os = "ios")'.dependencies]
bardecoder = "0.4.0"
core-graphics = "0.22.3"
core-media-sys = "0.1.2"
objc = { version = "0.2.7", features = ["exception"] }
objc-foundation = "0.1.1"
objc_id = "0.1.1"
image = { version = "0.23", default-features = false }

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1.7"
dioxus-web = "0.2.1"
surf = { version = "2.3.2", default-features = false, features = ["wasm-client"] }
wasm-logger = "0.2.0"
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["Clipboard", "Navigator",] }
wasm-bindgen-futures = "0.4.33"

[build-dependencies]
cc = "1.0.78"
