[package]
name = "rosetta-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "3.2.22", features = ["derive"] }
fraction = { version = "0.11.1", default-features = false, features = ["with-bigint", "with-decimal"] }
rosetta-client = { path = "../rosetta-client" }
surf = { version = "2.3.2", features = ["h1-client-rustls"], default-features = false }
