[package]
name = "rosetta-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.0.29", features = ["derive"] }
env_logger = "0.10.0"
rosetta-client = { path = "../rosetta-client" }
surf = { version = "2.3.2", features = ["h1-client-rustls"], default-features = false }
