[package]
name = "rosetta-client"
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/analog-labs/chain-connectors"
description = "Client library for interacting with connectors."

[dependencies]
anyhow = "1.0"
dirs-next = "2.0.0"
fraction = { version = "0.13.1", default-features = false, features = ["with-bigint", "with-decimal"] }
futures = "0.3"
getrandom = "0.2.8"
hex = "0.4.3"
log = "0.4"
rosetta-config-astar = { version = "0.4.0", path = "../chains/astar/config" }
rosetta-config-bitcoin = { version = "0.4.0", path = "../chains/bitcoin/config" }
rosetta-config-ethereum = { version = "0.4.0", path = "../chains/ethereum/config" }
rosetta-config-polkadot = { version = "0.4.0", path = "../chains/polkadot/config" }
rosetta-core = { version = "0.4.0", path = "../rosetta-core" }
rosetta-tx-ethereum = { version = "0.4.0", path = "../chains/ethereum/tx" }
rosetta-tx-polkadot = { version = "0.4.0", path = "../chains/polkadot/tx" }
serde = "1.0"
serde_json = "1.0"
surf = { version = "2.3", default-features = false }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2.8", features = ["js"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Storage", "Window"] }

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
surf = { version = "2.3", features = ["h1-client-rustls"], default-features = false }
tokio = { version = "1.32", features = ["rt-multi-thread", "macros"] }
