[package]
name = "rosetta-client"
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/analog-labs/chain-connectors"
description = "Client library for interacting with connectors."

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
derive_more = "0.99"
dirs-next = "2.0.0"
fraction = { version = "0.13.1", default-features = false, features = ["with-bigint", "with-decimal"] }
futures = "0.3"
getrandom = "0.2"
hex = "0.4.3"
log = "0.4"
num-traits = "0.2"
rosetta-core = { version = "0.4.0", path = "../rosetta-core" }
rosetta-server-astar = { version = "0.4.0", path = "../chains/astar/server" }
rosetta-server-bitcoin = { version = "0.4.0", path = "../chains/bitcoin/server" }
rosetta-server-ethereum = { version = "0.4.0", path = "../chains/ethereum/server" }
rosetta-server-polkadot = { version = "0.4.0", path = "../chains/polkadot/server" }
rosetta-tx-ethereum = { version = "0.4.0", path = "../chains/ethereum/tx" }
rosetta-tx-polkadot = { version = "0.4.0", path = "../chains/polkadot/tx" }
serde = "1.0"
serde_json = "1.0"

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Storage", "Window"] }
