[package]
name = "rosetta-core"
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/analog-labs/chain-connectors"
description = "Provides traits and definitions shared by the server and client crates."

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
fluent-uri = "0.1.4"
futures-util = "0.3"
parity-scale-codec = { version = "3.6", features = ["derive"] }
rosetta-crypto = { version = "0.4.0", path = "../rosetta-crypto" }
rosetta-types = { version = "0.4.0", path = "../rosetta-types" }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
