[package]
name = "rosetta-core"
version = "0.5.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/analog-labs/chain-connectors"
description = "Provides traits and definitions shared by the server and client crates."

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
fluent-uri = "0.1.4"
futures-util = "0.3"
rosetta-crypto.workspace = true
rosetta-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "1.0"
