[package]
name = "rosetta-crypto"
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/analog-labs/chain-connectors"
description = "Cryptographic primitives used by the rosetta client."

[dependencies]
anyhow = "1.0"
bech32 = "0.9.1"
blake2-rfc = "0.2.18"
bs58 = "0.5"
ecdsa = { version = "0.16.0", features = ["arithmetic"] }
ed25519-dalek = "1.0.1"
ethers = "2.0.7"
hex = "0.4.3"
hmac = "0.12.1"
k256 = "0.13.0"
p256 = "0.13.0"
ripemd = "0.1.3"
rust-bip39 = "1.0.0"
schnorrkel = "0.10.2"
sha2 = "0.10.6"
sha3 = "0.10.6"
sp-core = { version = "21.0", default-features = false, features = ["blake2", "std"] }
ss58-registry = "1.39"
substrate-bip39 = "0.4"
thiserror = "1.0"

[dev-dependencies]
bs58 = "0.5.0"
hex = "0.4.3"
rand = "0.8.5"
