[package]
name = "rosetta-docker"
version = "0.6.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/analog-labs/chain-connectors"
description = "Generic rosetta server testing infrastructure based on docker."

[features]
tests = ["dep:nanoid"]

[dependencies]
anyhow = "1.0"
dirs = "5.0"
docker-api = "0.14"
futures = "0.3"
getrandom = "0.2"
hex = "0.4"
log = "0.4"
nanoid = { version = "0.4", optional = true }
rosetta-client.workspace = true
rosetta-core.workspace = true
serde_json = "1.0"
sha2 = "0.10"
surf = { version = "2.3", default-features = false, features = ["h1-client-no-tls"] }
tokio = { workspace = true, features = ["signal"] }
tokio-retry = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
