[package]
name = "rosetta-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosetta-types = { path = "../rosetta-types" }
rosetta-client = { path = "../rosetta-client" }
surf = { version = "2.3.2", features = ["h1-client-rustls"], default-features = false }
tide = "0.16.0"
