[package]
name = "rosetta-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
femme = "2.2.1"
rosetta-client = { path = "../rosetta-client" }
rosetta-types = { path = "../rosetta-types" }
surf = { version = "2.3.2", features = ["h1-client-rustls"], default-features = false }
serde_json = "1.0.91"
tide = "0.16.0"
tokio = { version = "1.24.1", features = ["full"] }
