[package]
name = "rosetta-server-polkadot"
version = "0.1.7"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
femme = "2.2.1"
rosetta-server-substrate = { path = "../rosetta-server-substrate" }
tide = "0.16.0"
tokio = { version = "1.24.1", features = ["full"] }
