[package]
name = "rosetta-server-substrate"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
array-bytes = "4.1.0"
hex = "0.4.3"
parity-scale-codec = "3.2.1"
rosetta-crypto = { path = "../rosetta-crypto" }
rosetta-types = { path = "../rosetta-types" }
serde = "1.0.147"
serde_json = "1.0.87"
sp-keyring = "6.0.0"
subxt = "0.24.0"
syn = "1.0.80"
tide = "0.16.0"
