[package]
name = "rosetta-server"
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/analog-labs/chain-connectors"
description = "Generic rosetta server implementation."

[features]
default = []
native-tls = ["tokio-tungstenite/native-tls", "jsonrpsee/client-ws-transport-native-tls"]
webpki-tls = ["tokio-tungstenite/rustls-tls-webpki-roots", "jsonrpsee/client-ws-transport-webpki-tls"]
ws = [
  "dep:async-trait",
  "dep:futures",
  "dep:futures-util",
  "dep:futures-timer",
  "dep:jsonrpsee",
  "dep:subxt",
  "dep:pin-project",
  "futures/std",
]

[dependencies]
anyhow = "1.0"
async-trait = { version = "0.1", optional = true }
femme = "2.2.1"
futures = { version = "0.3", optional = true }
futures-timer = { version = "3.0", optional = true }
futures-util = { version = "0.3", optional = true }
hex = "0.4.3"
jsonrpsee = { version = "0.20.0", default-features = false, features = ["ws-client"], optional = true }
log = "0.4"
nanoid = { version = "0.4.0", optional = true }
pin-project = { version = "1.1", optional = true }
serde = "1.0"
serde_json = "1.0"
subxt = { version = "0.31", default-features = false, features = ["native", "substrate-compat"], optional = true }
tide = { version = "0.16.0", default-features = false, features = ["h1-server", "logger"] }
tokio = { version = "1.32", features = ["full"] }
tokio-retry = "0.3"
tokio-tungstenite = { version = "0.20.0", default-features = false, features = ["handshake", "connect"] }

[build-dependencies]
anyhow = "1.0"
vergen = { version = "8.1.1", features = ["build", "git", "gitcl"] }
