[package]
name = "rosetta-server"
version = "0.6.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/analog-labs/chain-connectors"
description = "Generic rosetta server implementation."

[features]
default = []
native-tls = ["tokio-tungstenite/native-tls", "jsonrpsee/client-ws-transport-tls"]
webpki-tls = ["tokio-tungstenite/rustls-tls-webpki-roots", "jsonrpsee/client-ws-transport-tls"]
ws = [
  "dep:async-trait",
  "dep:futures",
  "dep:futures-util",
  "dep:futures-timer",
  "dep:jsonrpsee",
  "dep:subxt",
  "dep:pin-project",
  "futures/std",
]

[dependencies]
anyhow = "1.0"
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
futures-timer = { version = "3.0", optional = true }
futures-util = { version = "0.3", optional = true }
hex = "0.4"
jsonrpsee = { workspace = true, features = ["ws-client", "http-client"], optional = true }
pin-project = { version = "1.1", optional = true }
serde.workspace = true
serde_json.workspace = true
subxt = { workspace = true, features = ["native", "substrate-compat"], optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-retry = "0.3"
tokio-tungstenite = { version = "0.23", default-features = false, features = ["handshake", "connect"] }
tracing = "0.1"
url = "2.4"
