[package]
name = "rosetta-utils"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/analog-labs/chain-connectors"
description = "just exports useful primitives from std or client/alloc to be used with any code with no-std support."

[dependencies]
# serde dependencies
bytes = { version = "1.5", default-features = false, optional = true }
generic-array = { version = "1.1" }
impl-serde-macro = { package = "impl-serde", version = "0.4", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
sp-std = { version = "14.0" }

# futures dependencies
futures-timer = { version = "3.0", optional = true }
futures-util = { version = "0.3", optional = true }
jsonrpsee-core = { version = "0.24", default-features = false, features = ["client"], optional = true }
pin-project = { version = "1.1", optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
serde_json = { version = "1.0" }
tokio = { version = "1.36", features = ["full"] }

[features]
default = ["std", "bytes", "serde", "jsonrpsee"]
std = [
  "bytes?/std",
  "serde?/std",
]
serde = ["dep:serde", "dep:impl-serde-macro"]
bytes = ["dep:bytes"]
jsonrpsee = [
  "std",
  "serde",
  "futures",
  "dep:jsonrpsee-core",
  "dep:pin-project",
  "dep:tracing",
]
futures = [
  "std",
  "dep:futures-util",
  "dep:futures-timer",
  "dep:pin-project",
  "dep:tracing",
]
