[package]
name = "rosetta-wallet"
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/analog-labs/chain-connectors"
description = "Command line wallet implemented using the rosetta client."

[dependencies]
anyhow = "1.0.69"
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.1.8", features = ["derive"] }
futures = "0.3.26"
rosetta-client = { version = "0.4.0", path = "../rosetta-client" }
surf = { version = "2.3.2", default-features = false, features = ["h1-client-rustls"] }
tracing-subscriber = "0.3.16"
hex = "0.4.3"
fs = "0.0.5"
