[package]
name = "rosetta-wallet"
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/analog-labs/chain-connectors"
description = "Command line wallet implemented using the rosetta client."

[dependencies]
anyhow = "1.0"
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.4", features = ["derive"] }
ethers-solc = "2.0.1"
futures = "0.3"
hex = "0.4"
rosetta-client = { version = "0.4.0", path = "../rosetta-client" }
rosetta-core = { version = "0.4.0", path = "../rosetta-core" }
rosetta-server-astar = { version = "0.4.0", path = "../chains/astar/server" }
rosetta-server-bitcoin = { version = "0.4.0", path = "../chains/bitcoin/server" }
rosetta-server-ethereum = { version = "0.4.0", path = "../chains/ethereum/server" }
rosetta-server-polkadot = { version = "0.4.0", path = "../chains/polkadot/server" }
surf = { version = "2.3", default-features = false, features = ["h1-client-rustls"] }
tracing-subscriber = "0.3"
