[package]
name = "rosetta-wallet"
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/analog-labs/chain-connectors"
description = "Command line wallet implemented using the rosetta client."

[dependencies]
anyhow = "1.0"
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.4", features = ["derive"] }
ethers-solc = "2.0.1"
futures = "0.3"
hex = "0.4"
rosetta-client = { version = "0.4.0", path = "../rosetta-client" }
tracing-subscriber = "0.3"
url = "2.4.1"
