[package]
name = "rosetta-utils-serde"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/analog-labs/chain-connectors"
description = "just exports useful primitives from std or client/alloc to be used with any code with no-std support."

[dependencies]
bytes = { version = "1.5", default-features = false, optional = true }
generic-array = { version = "1.0" }
impl-serde-macro = { package = "impl-serde", version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sp-std = { version = "14.0" }

[dev-dependencies]
serde_json = { version = "1.0" }

[features]
default = ["std", "bytes"]
std = [
  "bytes?/std",
  "serde/std",
]
bytes = ["dep:bytes"]
