[package]
name = "rosetta-config-arbitrum"
version = "0.5.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/analog-labs/chain-connectors"
description = "Arbitrum rosetta server."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rosetta-core.workspace = true
serde.workspace = true