[package]
name = "rosetta-config-astar"
version = "0.6.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/analog-labs/chain-connectors"
description = "Astar configuration."

[features]
default = ["astar-metadata"]
astar-metadata = ["subxt"]

[dependencies]
anyhow = "1.0"
rosetta-core.workspace = true
subxt = { workspace = true, features = ["substrate-compat", "native"], optional = true }
